apps/staging/plausible/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plausible-http
  namespace: harrytang-staging
spec:
  parentRefs:
    - name: harrytang
      namespace: gateway
      sectionName: wildcard-http
  hostnames:
    - webb-next.harrytang.xyz
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plausible-https
  namespace: harrytang-staging
spec:
  parentRefs:
    - name: harrytang
      namespace: gateway
      sectionName: wildcard-https
  hostnames:
    - webb-next.harrytang.xyz
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: next.harrytang.xyz
            statusCode: 302
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: plausible
          namespace: plausible
          port: 8000
